<resources>
    <string name="app_name">Tugas3v2</string>
    <string name="ikon_aplikasi">Ikon aplikasi</string>
    <string name="widget1">Widget 1</string>
    <string name="aplikasi1">Aplikasi 1</string>
    <string name="aplikasi2">Aplikasi 2</string>
    <string name="aplikasi3">Aplikasi 3</string>
    <string name="aplikasi4">Aplikasi 4</string>
    <string name="aplikasi5">Aplikasi 5</string>
    <string name="aplikasi6">Aplikasi 6</string>
    <string name="scroll">bagian</string>
</resources>