<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pxfuel"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="51dp"
        android:layout_height="15dp"
        android:layout_marginStart="262dp"
        android:layout_marginEnd="80dp"
        android:text="@string/widget1"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLong" />

    <SearchView
        android:layout_width="342dp"
        android:layout_height="59dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/searchbackground"
        android:iconifiedByDefault="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextClock
        android:id="@+id/textClock2"
        android:layout_width="242dp"
        android:layout_height="62dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="120dp"
        android:fontFamily="serif"
        android:format12Hour="HH:mm"
        android:format24Hour="HH:mm"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDate"
        android:layout_width="118dp"
        android:layout_height="37dp"
        android:layout_below="@id/textClock2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="180dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageViewLong"
        android:layout_width="156dp"
        android:layout_height="66dp"
        android:layout_marginStart="209dp"
        android:layout_marginTop="332dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/widget1"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle1" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="63dp"
        android:layout_height="64dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="592dp"
        android:layout_marginEnd="320dp"
        android:contentDescription="@string/ikon_aplikasi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/apppic" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="307dp"
        android:text="@string/aplikasi1"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="63dp"
        android:layout_height="64dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="592dp"
        android:layout_marginEnd="209dp"
        android:contentDescription="@string/ikon_aplikasi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/apppic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="65dp"
        android:layout_height="18dp"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="215dp"
        android:text="@string/aplikasi2"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="63dp"
        android:layout_height="64dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="592dp"
        android:layout_marginEnd="120dp"
        android:contentDescription="@string/ikon_aplikasi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/apppic" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="63dp"
        android:layout_height="23dp"
        android:layout_marginStart="216dp"
        android:layout_marginEnd="123dp"
        android:text="@string/aplikasi3"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="63dp"
        android:layout_height="64dp"
        android:layout_marginStart="320dp"
        android:layout_marginTop="592dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/ikon_aplikasi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/apppic" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="64dp"
        android:layout_height="20dp"
        android:layout_marginStart="306dp"
        android:layout_marginEnd="23dp"
        android:text="@string/aplikasi4"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="63dp"
        android:layout_height="64dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="460dp"
        android:layout_marginEnd="120dp"
        android:contentDescription="@string/ikon_aplikasi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/apppic" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="64dp"
        android:layout_height="20dp"
        android:layout_marginStart="215dp"
        android:layout_marginEnd="114dp"
        android:text="@string/aplikasi5"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="63dp"
        android:layout_height="64dp"
        android:layout_marginStart="320dp"
        android:layout_marginTop="460dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/ikon_aplikasi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/apppic" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="64dp"
        android:layout_height="20dp"
        android:layout_marginStart="306dp"
        android:layout_marginEnd="23dp"
        android:text="@string/aplikasi6"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="63dp"
        android:layout_height="64dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="716dp"
        android:layout_marginEnd="255dp"
        android:contentDescription="@string/ikon_aplikasi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/apppic" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="63dp"
        android:layout_height="64dp"
        android:layout_marginStart="174dp"
        android:layout_marginTop="716dp"
        android:layout_marginEnd="156dp"
        android:contentDescription="@string/ikon_aplikasi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/apppic" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="63dp"
        android:layout_height="64dp"
        android:layout_marginStart="273dp"
        android:layout_marginTop="716dp"
        android:layout_marginEnd="57dp"
        android:contentDescription="@string/ikon_aplikasi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/apppic" />

    <ImageView
        android:id="@+id/imageViewc"
        android:layout_width="4dp"
        android:layout_height="4dp"
        android:layout_marginStart="195dp"
        android:layout_marginTop="670dp"
        android:layout_marginEnd="195dp"
        android:layout_marginBottom="94dp"
        android:contentDescription="@string/scroll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/scrollonly" />

</androidx.constraintlayout.widget.ConstraintLayout>